--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -49,3 +49,26 @@
 ::-webkit-scrollbar-thumb{
     background-color: $color-accent;
 }
+
+.alert{
+    transform: translate(-50%, -50%);
+    position: absolute;
+    top: 10%;
+    left: 50%;
+    border: 3px solid;
+    padding: 20px;
+    border-radius:20px ;
+    background-color: #fff;
+    &.alert-deleted{
+        color: red;
+        border-color: red;
+    }
+    &.alert-created{
+        color: green;
+        border-color: green;
+    }
+    &.alert-edited{
+        color: lightseagreen;
+        border-color: lightseagreen;
+    }
+}
